# tkdialogs

./: .gitignore  LICENSE  ListboxDialog.py  README.md  demo.py  meta.yaml  pyproject.toml
.github/workflows/: build.yml
internals/: OkCancelButtons.py
src/tkdialogs/: ListboxDialog.py  __init__.py
src/tkdialogs/internals/: Label.py  OkCancelButtons.py  __init__.py
